--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 :root{
-    --primary-text-color: #212121; 
+    --primary-text-color: #212121;
+    --fill-blue: #2196F3;
+    --privary-grey: #757575;
 }
 body{
     background-color: #ffffff;
@@ -12,20 +14,21 @@ body{
 
 .site-nav .link{
     text-decoration: none;
-    color: #212121;
+    color: var(--primary-text-color);
     font-size: 14px;
     line-height: 16.41px;
     letter-spacing: 2%;
 }
 .site-nav .current,
+.logo span,
 .auth-nav .link:hover,
 .auth-nav .link:focus{
-    color: #2196F3;
+    color: var(--fill-blue);
 }
 .auth-nav .link{
     font-size: 14px;
     text-decoration: none;
-    color: #757575;
+    color: var(--privary-grey);
 }
 .logo{
     font-family: 'Raleway', sans-serif;
@@ -35,9 +38,6 @@ body{
     letter-spacing: 3%;
     color: var(--primary-text-color);
     text-decoration: none;
-}
-.logo span{
-    color: #2196F3;
 }
 .section-order{
     background-color: #2F303A;
@@ -60,7 +60,7 @@ body{
     border: 0;
     width: 200px;
     height: 50px;
-    background-color: #2196F3;
+    background-color: var(--fill-blue);
     color: #ffffff;
 }
 .section-features,
@@ -80,7 +80,7 @@ body{
     font-weight: 400;
     line-height: 24px;
     letter-spacing: 3%;
-    color: #757575;
+    color: var(--privary-grey);
 }
 .section-about .title{
     font-weight: 700;
@@ -119,7 +119,7 @@ body{
     line-height: 18.75px;
     letter-spacing: 3%;
     text-align: center;
-    color: #757575;
+    color: var(--privary-grey);
 }
 .page-footer{
     background-color: #2F303A;
@@ -151,7 +151,7 @@ body{
 .section-works .button:hover,
 .section-works .button:focus{
     color: #ffffff;
-    background-color: #2196F3;
+    background-color: var(--fill-blue);
 }
 
 .works .title{
@@ -165,7 +165,7 @@ body{
     font-size: 16px;
     line-height: 30px;
     letter-spacing: 3%;
-    color: #757575;
+    color: var(--privary-grey);
 }
 .works>li{
     background-color: #ffffff;
